Revision history for Perl distribution Test-Class-Moose

{{$NEXT}}

  [ENHANCEMENTS]

  * Greatly expanded documentation for the test control methods.


0.98     2019-10-26

  [BUG FIXES]

  * Escape the directory name when using it in regex while loading files in
    Test::Class::Moose::Load. Paths with special characters were not loading
    modules properly. Fixed by jrubinator. GH #101.


0.97     2019-04-21

  [BUG FIXES]

  * Require Test2 1.302118, not 1.1302118 (note the extra 1 after the
    decimal). Fixed by Christopher Layne. GH #99.


0.96     2018-12-21

  [ENHANCEMENTS]

  * Converted uses of JSON.pm to JSON::MaybeXS. Implemented by Karen
    Etheridge. PR #98.


0.95     2018-11-03

  [ENHANCEMENTS]

  * The CLI class/role now accepts a --test-lib-dirs option. This lets you
    tell it what directories contain test classes from the CLI.


0.94     2018-08-18

  [BUG FIXES]

  * Replace all cases of "use 5.10.0" with "use 5.010000". The former was
    causing some versions of Perl to emit warnings that cause tests to fail.


0.93     2018-08-14

  [ENHANCEMENTS]

  * The CLI class (and role) now allow you to pass a directory for the
  --classes option. This directory is searched recursively for classes to be
  loaded. Based on a feature request from jrubinator. GH #91.

  [BUG FIXES]

  * Extending a TCM class with a non-existing or non-TCM class now delivers a
    fatal error instead of silently ignoring the test class. Implemented by
    Harald Jörg. PR #93, fixes GH #70.

0.92     2017-12-23

  [ENHANCEMENTS]

  * Added a new "executor_roles" parameter to the Test::Class::Moose::Runner
    constructor. This allows you to apply roles to the executor (the object
    which executes test classes) as a way to extend the default TCM
    behavior. See the documentation for Test::Class::Moose::Role::Executor for
    methods which you can wrap.

  [BACKWARDS INCOMPATIBILITIES]

  * Removed the never-documented Test::Class::Moose::Report's is_parallel